data/derived/fa15/progs/unify/prog2492.ml.out
Characters 53-54:
  if List.length l = 1 then [l*i] else
                             ^
Error: This expression has type 'a list
       but an expression was expected of type int
